Add missing includes

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=681963